Affectation des nouveaux changements aux employée. La vue liste reste toujours infonctionnelle

--- a/ressource humaine/.settings/org.eclipse.core.resources.prefs
+++ b/ressource humaine/.settings/org.eclipse.core.resources.prefs
@@ -3,3 +3,4 @@ encoding/__init__.py=utf-8
 encoding/__openerp__.py=utf-8
 encoding/cost_center.py=utf-8
 encoding/inherit_hr.py=utf-8
+encoding/inherit_hr_contract.py=utf-8
