--- a/ressource humaine/.settings/org.eclipse.core.resources.prefs
+++ b/ressource humaine/.settings/org.eclipse.core.resources.prefs
@@ -5,4 +5,5 @@ encoding/cost_center.py=utf-8
 encoding/function.py=utf-8
 encoding/inherit_hr.py=utf-8
 encoding/inherit_hr_contract.py=utf-8
+encoding/inherit_hr_job.py=utf-8
 encoding/salary_type.py=utf-8
